[package]
name = "spree"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.19.0"
env_logger = "0.11.5"
freecs = "0.1.3"
log = "0.4.22"
nalgebra-glm = { version = "0.19.0", features = ["convert-bytemuck", "serde-serialize"] }
pollster = "0.4.0"
serde = { version = "1.0.214", features = ["derive"] }
wgpu = "23.0.0"
winit = "0.30.5"
