[package]
name = "spree"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.6.0", features = ["serde"] }
bytemuck = { version = "1.19.0", features = ["derive"] }
env_logger = "0.11.5"
freecs = "0.1.5"
log = "0.4.22"
nalgebra-glm = { version = "0.19.0", features = [
    "convert-bytemuck",
    "serde-serialize",
] }
pollster = "0.4.0"
rayon = "1.10.0"
serde = { version = "1.0.214", features = ["derive"] }
wgpu = "23.0.0"
winit = { version = "0.30.5", features = ["serde"] }
